# roguelike-cpp

./: .gitignore  BUILD.txt  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: test.yml
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: ARCHITECTURE.md  D1_GAMEPLAY_LOOP_DESIGN.md  G4_PLATFORM_BIBLE.md  WORLD_LORE.md
resources/: buffs.json  enemies.json  relics.json
src/: main.cpp
src/ai/agents/: ai_agent.h  bt_agent.cpp  bt_agent.h
src/ai/behavior_tree/: behavior_tree.h  blackboard.h  bt_action.h  bt_condition.h  bt_move_to_target.h  bt_node.h  bt_selector.h  bt_sequence.h
src/ai/mcts/: action.h  combat_evaluator.cpp  combat_evaluator.h  mcts_node.h  mcts_search.cpp  mcts_search.h  simulation_state.cpp  simulation_state.h
src/ai/navigation/: pathfinder.cpp  pathfinder.h
src/ai/rl/: environment.cpp  environment.h  observation.cpp  observation.h  q_agent.cpp  q_agent.h  random_agent.cpp  random_agent.h  rl_runner.cpp
src/core/: builtin_provider.cpp  builtin_provider.h  input_map.cpp  input_map.h  logger.cpp  logger.h  merge_patch.h  mod_dependency.cpp  mod_dependency.h  mod_manager.cpp  mod_manager.h  mod_provider.cpp  mod_provider.h  node.cpp  node.h  object.h  registry_builder.cpp  registry_builder.h  registry_provider.h  scene_tree.cpp  scene_tree.h  seh_handler.cpp  win_center.cpp  win_center.h
src/core/replay/: player.cpp  player.h  recorder.cpp  recorder.h  replay_file.cpp  replay_file.h  state_hash.cpp  state_hash.h
src/core/sim/: sim_ai.cpp  sim_ai.h  sim_runner.cpp  sim_runner.h
src/data/: boss_defs.cpp  boss_defs.h  dialogue_defs.cpp  dialogue_defs.h  ending_defs.cpp  ending_defs.h  enemy_defs.cpp  enemy_defs.h  item_defs.cpp  item_defs.h  meta_node_defs.cpp  meta_node_defs.h  quest_defs.cpp  quest_defs.h  skill_defs.cpp  skill_defs.h  vfx_recipe.cpp  vfx_recipe.h
src/game/: boss_behavior.h  boss_command.cpp  boss_command.h  boss_encounter.cpp  boss_replay.h  boss_timeline.h  build_score.cpp  build_score.h  build_tag.h  camera_director.h  combat_feel.h  config.cpp  config.h  ending_director.cpp  ending_director.h  event_system.h  floor_config.cpp  floor_config.h  game_flow_director.cpp  gameplay_system_director.h  growth_curve.cpp  meta_progression.cpp  meta_progression.h  player_controller.cpp  player_controller.h  presentation_system_director.cpp  quest_manager.cpp  relationship_system.cpp  relationship_system.h  relic_progression.cpp  relic_progression.h  world_reaction.cpp  world_reaction.h  world_state.cpp
src/game/audio/: audio_server.cpp  audio_server.h  bgm_engine.cpp  bgm_engine.h  wave_synth.cpp  wave_synth.h
src/game/boss/: arena_manager.cpp  arena_manager.h  boss_behavior.cpp  boss_behavior.h  boss_cinematic.cpp  boss_cinematic.h  boss_command.h  boss_encounter.h  boss_evolution.cpp  boss_evolution.h  boss_narrative.cpp  boss_narrative.h  boss_replay.cpp  boss_replay.h  boss_timeline.cpp  boss_timeline.h
src/game/core/: event_bus.cpp  event_bus.h  event_types.h  service_locator.h
src/game/director/: boss_system_director.cpp  boss_system_director.h  game_flow_director.cpp  game_flow_director.h  gameplay_system_director.cpp  gameplay_system_director.h  presentation_system_director.cpp  presentation_system_director.h
src/game/entities/: ai.cpp  ai.h  boss.cpp  boss.h  combat_stats.cpp  combat_stats.h  entity.cpp  entity.h  inventory.cpp  inventory.h  item.cpp  item.h  monster.cpp  monster.h  player.cpp  player.h  skill.cpp  skill.h
src/game/resources/: resource_manager.cpp  resource_manager.h
src/game/save/: save_manager.cpp  save_manager.h
src/game/scene/: game_scene_combat.cpp  game_scene_combat.h  game_scene_input.cpp  game_scene_input.h  game_scene_interaction.cpp  game_scene_interaction.h
src/game/scenes/: credits_scene.cpp  credits_scene.h  death_scene.cpp  death_scene.h  floor_select_scene.cpp  floor_select_scene.h  game_scene.cpp  game_scene.h  title_scene.cpp  title_scene.h  tutorial_scene.cpp  tutorial_scene.h  victory_scene.cpp  victory_scene.h
src/game/systems/: attack_evolution.cpp  attack_evolution.h  attack_evolution_state.h  combat_coordinator.cpp  combat_coordinator.h  combat_system.cpp  combat_system.h  floor_manager.cpp  floor_manager.h  game_renderer.cpp  game_renderer.h  interaction_handler.cpp  interaction_handler.h  skill_evolution.cpp  skill_evolution.h  team_coordinator.cpp  team_coordinator.h  vfx_server.cpp  vfx_server.h
src/game/tutorial/: tutorial_guide.cpp  tutorial_guide.h
src/game/types/: boss_types.h  combat_types.h  meta_types.h  story_types.h  world_types.h
src/game/world/: biome.cpp  biome.h  dungeon_generator.cpp  dungeon_generator.h  encounter.cpp  encounter.h  event_system.cpp  event_system.h  floor_config.cpp  floor_config.h  floor_narrative.cpp  floor_narrative.h  flow_director.cpp  flow_director.h  game_map.cpp  game_map.h  growth_curve.h  hazard.cpp  hazard.h  landmark.cpp  landmark.h  npc_system.cpp  npc_system.h  quest_manager.cpp  quest_manager.h  rule_chain.cpp  rule_chain.h  special_room.cpp  special_room.h  world_state.h
tests/: CMakeLists.txt
tests/ai/: astar_test.cpp  behavior_tree_test.cpp
tests/combat/: action_test.cpp  buff_test.cpp  damage_test.cpp
tests/integration/: boot_test.cpp
tests/mcts/: mcts_search_test.cpp  simulation_state_test.cpp
tests/registry/: registry_test.cpp
tests/rl/: environment_test.cpp  observation_test.cpp  q_agent_test.cpp
tests/save/: save_test.cpp
tests/sim/: simulation_test.cpp
tests/world/: biome_test.cpp  condition_test.cpp  encounter_test.cpp
tools/: extract_chars.py  font_codepoints.txt  replace_methods.py  world_validator.py
